<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Where to Park</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="searchActivity">Search</string>
    <string name="tagActivity">Tag a Spot</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="reminderActivity">Reminders</string>
    <string name="pucRenewalLabel">PUC Renewal</string>
    <string name="licenseRenewalLabel">License Renewal</string>
    <string name="insuranceRenewalLabel">Insurance Renewal</string>
    <string name="datePickerChangeLabel">Change</string>
    <string name="searchString">Search Spot</string>
    <string name="tagString">Tag Spot</string>
    <string name="fineString">Fines</string>
    <string name="feedbackString">Feedback</string>
    <string name="towString">Towing</string>
    <string name="punctureString">Puncture</string>
    <string name="favoriteString">Favorites</string>
    <string name="reminderString">Reminders</string>
    <string name="aboutString">About</string>
    <string name="tagFormCost">Enter Cost ( Enter 0 if free )</string>
    <string-array name="spotTypeSpinner">
        <item>Type of Spot</item>
        <item>Parking Spot</item>
        <item>Towing Station</item>
        <item>Puncturewala</item>
    </string-array>
    <string-array name="timeOfDay">
        <item >--</item>
        <item >00</item>
        <item >01</item>
        <item >02</item>
        <item >03</item>
        <item >04</item>
        <item >05</item>
        <item >06</item>
        <item >07</item>
        <item >08</item>
        <item >09</item>
        <item >10</item>
        <item >11</item>
        <item >12</item>
        <item >13</item>
        <item >14</item>
        <item >15</item>
        <item >16</item>
        <item >17</item>
        <item >18</item>
        <item >19</item>
        <item >20</item>
        <item >21</item>
        <item >22</item>
        <item >23</item>
    </string-array>
    <string name="find">Find</string>
    <string name="loading">Loading...</string>
    <string name="pleaseWait">Please Wait ...</string>
    <string name="cannotConnect">Cannot Connect to Mumbai Parking Server.</string>
    <string name="checkInternet">Please Check Your Internet Connection</string>
    <string name="editRating">Edit Safety Rating</string>
    <string name="editCost">"Edit Cost "</string>
    <string name="comments">Comments</string>
    <string name="addToFav">Add to Favorites</string>
    <string name="markBogus">Mark as Bogus Spot</string>
    <string name="updateSpotTitle">Update the Spot Number :</string>
    <string name="giveRating">Give your Rating</string>
    <string name="rating">Rating</string>
    <string name="app_id">252862164887073</string>
    <string name="copyRight">Copyright &#169; Makeshift Developers</string>
    <string name="designFeedback">Design :</string>
    <string name="usabilityFeedback">Usability :</string>
    <string name="intuitivityFeedback">Intuitivity :</string>
    <string name="availabilityFeedback">Availability :</string>

</resources>
