<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="100dp">
<!--         android:paddingBottom="50dp" > -->  
    
            <RelativeLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_centerVertical="true" >
		
		        <TextView
		            android:id="@+id/designTextView"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_alignParentTop="true"
		            android:text="@string/designFeedback"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		        <RatingBar
		            android:id="@+id/designRatingBar"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_below="@+id/designTextView" />
		
		        <TextView
		            android:id="@+id/ratingTextView"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_below="@+id/designRatingBar"
		            android:text="@string/usabilityFeedback"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		        <RatingBar
		            android:id="@+id/usabilityRatingBar"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_below="@+id/ratingTextView" />
		
		        <TextView
		            android:id="@+id/intuitivityTextView"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_below="@+id/usabilityRatingBar"
		            android:text="@string/intuitivityFeedback"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		        <RatingBar
		            android:id="@+id/IntuitivityRatingBar"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_below="@+id/intuitivityTextView" />
		
		        <TextView
		            android:id="@+id/copyRightText"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_below="@+id/IntuitivityRatingBar"
		            android:text="@string/availabilityFeedback"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		        <RatingBar
		            android:id="@+id/AvailabilityRatingBar"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_below="@+id/copyRightText" />
		
		        <TextView
		            android:id="@+id/textView5"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_below="@+id/AvailabilityRatingBar"
		            android:text="@string/comments"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		        <EditText
		            android:id="@+id/commentsBoxFeedback"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_below="@+id/textView5"
		            android:lines="2"
		            android:inputType="text"
		            android:ems="10" >
		
		            <requestFocus />
		        </EditText>
		
		        
		        
		    </RelativeLayout>
    </ScrollView>
    
			<Button
			    android:id="@+id/doneFeedback"
			    android:layout_width="fill_parent"
			    android:layout_height="48dp"
			    android:layout_alignParentBottom="true"
			    android:layout_centerHorizontal="true"
			    android:background="@drawable/buttonbg"
			    android:padding="0dp"
			    android:text="@string/done" />

</RelativeLayout>
