<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginBottom="50dp">
        
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="20dp"
    android:paddingBottom="50dp"
    >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/giveRating"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RatingBar
            android:id="@+id/ratingBarUpdateSpot"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/ratingBarUpdateSpot"
            android:text="@string/editCost"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editcostUpdateSpot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView2"
            android:ems="10"
            android:inputType="number" />
        
        <RelativeLayout 
		    android:id="@+id/parkingSpotDetailsUpdateSpot"
		    android:layout_below="@+id/commentsUpdateSpot"
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
	        
		    <RadioGroup
		        android:id="@+id/radioGroup1UpdateSpot"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:orientation="horizontal" >
	
		        <RadioButton
		            android:id="@+id/radioBikesUpdateSpot"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="Bikes" />
		
		        <RadioButton
		            android:id="@+id/radioCarsUpdateSpot"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="Cars" />
		
		        <RadioButton
		            android:id="@+id/radioBothUpdateSpot"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="Both" />
		    </RadioGroup>
		
		    <RadioGroup
		        android:id="@+id/radioGroup2UpdateSpot"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		    	android:layout_marginTop="5dp"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/radioGroup1UpdateSpot"
		        android:orientation="vertical" >
		
		        <RadioButton
		            android:id="@+id/radioAll"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="All Days" />
		
		        <RadioButton
		            android:id="@+id/radioEven"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="Even Days" />
		
		        <RadioButton
		            android:id="@+id/radioOdd"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="Odd Days" />
		    </RadioGroup>
		
		    <TableLayout
		        android:id="@+id/tableLayout1"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginTop="10dp"
		        android:layout_below="@+id/textView5"
		        android:weightSum="2" >
		
		        <TableRow
		            android:id="@+id/tableRow1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" >
		
		            <TextView
		                android:id="@+id/textView3UpdateSpot"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_weight="1"
		                android:textSize="15sp"
		                android:text="From (24 Hrs)" />
		
		            <TextView
		                android:id="@+id/textView4UpdateSpot"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_weight="1"
		                android:textSize="15sp"
		                android:text="To (24 Hrs)" />
		        </TableRow>
		
		        <TableRow
		            android:id="@+id/tableRow2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" >
		
		            <Spinner
		                android:id="@+id/fromTimeSpinner"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_weight="1" />
		            <Spinner
		                android:id="@+id/toTimeSpinner"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_weight="1" />
		        </TableRow>
		    </TableLayout>
		
		    <TextView
		        android:id="@+id/textView5"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/radioGroup2UpdateSpot"
		        android:layout_marginTop="15dp"
		        android:textSize="15sp"
		        android:text="Timing (if any) " />
		  
		</RelativeLayout>

        <TextView
            android:id="@+id/textView3UpdateSpot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editcostUpdateSpot"
            android:text="@string/comments"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/commentsUpdateSpot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView3UpdateSpot"
            android:ems="10"
            android:inputType="textMultiLine"
            android:maxLines="5" />

        <CheckBox
            android:id="@+id/favoriteCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/parkingSpotDetailsUpdateSpot"
            android:text="@string/addToFav" />

        <Button
            android:id="@+id/bogusButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/favoriteCheckBox"
            android:layout_centerHorizontal="true"
            android:background="@drawable/buttonbg"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/markBogus" />

    </RelativeLayout>
  </ScrollView> 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" 
        android:weightSum="2">

        <Button
            android:id="@+id/doneUpdateSpot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done" 
            android:background="@drawable/buttonbg"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/cancelUpdateSpot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:background="@drawable/buttonbg"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>
